; ModuleID = '/home/carl/AnghaBench/xLua/build/luasocket/extr_wsocket.c_socket_bind.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luasocket/extr_wsocket.c_socket_bind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IO_DONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @socket_bind(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* @IO_DONE, align 4
  store i32 %8, i32* %7, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @socket_setblocking(i32* %9)
  %11 = load i32*, i32** %4, align 8
  %12 = load i32, i32* %11, align 4
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i64 @bind(i32 %12, i32* %13, i32 %14)
  %16 = icmp slt i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %3
  %18 = call i32 (...) @WSAGetLastError()
  store i32 %18, i32* %7, align 4
  br label %19

19:                                               ; preds = %17, %3
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @socket_setnonblocking(i32* %20)
  %22 = load i32, i32* %7, align 4
  ret i32 %22
}

declare dso_local i32 @socket_setblocking(i32*) #1

declare dso_local i64 @bind(i32, i32*, i32) #1

declare dso_local i32 @WSAGetLastError(...) #1

declare dso_local i32 @socket_setnonblocking(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
